# hieropy

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/hieropy/: __init__.py  edittree.py  hieroparsing.py  mdcconversion.py  mdcsyntax.py  ocr.py  options.py  previewdrawing.py  printables.py  resconversion.py  resstructure.py  spatialparsing.py  uniconstants.py  unieditor.py  uniextraction.py  uninames.py  uniproperties.py  uniprops.py  unistructure.py  unitransform.py  unittf.py
src/hieropy/resources/: bottomdown.csv  edithelp.html  insertions.json  keywordpoints.csv  namepointext.csv  ocromit.txt  pointinfo.csv  topup.csv  translitpoints.csv
tests/: test_conversion.py  test_ocr.py  test_opentype.py  test_parsing.py
tests/data/: restestsuitenormalized.txt
tests/resources/: BritishMuseumEA101.html  bm.css  extract.docx  extract.odt  extract.txt  extract.xml  mdcreal.txt  mdcuniconversion.csv  mdcuniconversionerror.txt  normalization.csv  opentype.css  opentype.html  restestsuitenormalized.txt  restestsuitespecial.txt  resuniconversion.csv  resuniconversioncolored.csv  resuniconversionerror.txt  unitestsuite.txt
